--- a/package.json
+++ b/package.json
@@ -1,98 +1,76 @@
 {
-  "name": "nexon",
-  "version": "2.0.0",
+  "name": "nextjs-notion-starter-kit",
+  "version": "0.1.0",
   "private": true,
   "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
-  "author": "Feng Kaiyu <loveress01@outlook.com>",
-  "repository": "fky2015/nexon",
+  "author": "Travis Fischer <travis@transitivebullsh.it>",
+  "repository": "transitive-bullshit/nextjs-notion-starter-kit",
   "license": "MIT",
   "engines": {
-    "node": ">=14.17"
+    "node": ">=10"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy": "vercel deploy",
+    "deploy": "vercel --prod",
     "deps": "run-s deps:*",
     "deps:update": "[ -z $GITHUB_ACTIONS ] && yarn add notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
     "deps:link": "[ -z $GITHUB_ACTIONS ] && yarn link notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:link on CI'",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
-    "test": "run-p test:*",
-    "test:lint": "eslint '**/*.{ts,tsx}'",
-    "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check"
+    "test": "run-s test:*",
+    "test:lint": "eslint .",
+    "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check",
+    "posttest": "run-s build"
   },
   "dependencies": {
-    "@giscus/react": "^1.1.2",
-    "@keyvhq/core": "^1.6.9",
-    "@keyvhq/redis": "^1.6.10",
-    "@react-icons/all-files": "^4.1.0",
+    "@google-cloud/firestore": "^4.10.1",
     "classnames": "^2.3.1",
-    "date-fns": "^2.28.0",
-    "expiry-map": "^2.0.0",
-    "fathom-client": "^3.4.1",
-    "got": "^12.0.3",
+    "date-fns": "^2.21.1",
+    "fathom-client": "^3.0.0",
+    "got": "^11.8.2",
     "isomorphic-unfetch": "^3.1.0",
-    "lodash.omit": "^4.5.0",
     "lqip-modern": "^1.2.0",
-    "next": "^12.1.1",
-    "next-api-og-image": "^2.2.1",
-    "next-compose-plugins": "^2.2.1",
-    "nextjs-sitemap-generator": "^1.3.1",
-    "next-themes": "^0.1.1",
+    "next": "^10.2.0",
     "node-fetch": "^2.6.1",
-    "notion-client": "^6.11.0",
-    "notion-types": "^6.11.0",
-    "notion-utils": "^6.11.0",
-    "p-map": "^5.3.0",
-    "p-memoize": "^6.0.1",
-    "posthog-js": "^1.20.2",
-    "raf": "^3.4.1",
-    "random": "^3.0.6",
+    "notion-client": "^4.9.10",
+    "notion-types": "^4.8.2",
+    "notion-utils": "^4.8.6",
+    "p-map": "^4.0.0",
+    "p-memoize": "^4.0.0",
     "react": "^17.0.2",
     "react-body-classname": "^1.3.1",
     "react-dom": "^17.0.2",
-    "react-fluid-animation": "^1.0.1",
-    "react-notion-x": "^6.11.0",
-    "react-static-tweets": "^0.7.2",
-    "react-use": "^17.3.2",
-    "rss": "^1.2.2",
-    "static-tweets": "^0.7.2"
+    "react-icons": "^4.2.0",
+    "react-notion-x": "^4.9.9",
+    "react-static-tweets": "^0.5.3",
+    "react-use": "^17.2.4",
+    "static-tweets": "^0.5.3",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.1.0",
-    "@types/keyv__redis": "^1.3.3",
-    "@types/lodash.omit": "^4.5.6",
-    "@types/node": "^17.0.23",
-    "@types/node-fetch": "^3.0.3",
-    "@types/react": "^17.0.31",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "autoprefixer": "^10.4.4",
+    "@next/bundle-analyzer": "^10.2.0",
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^15.0.1",
+    "@types/node-fetch": "^2.5.10",
+    "@types/react": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.23.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.4.4"
-  },
-  "resolutions": {
-    "next-api-og-image/chrome-aws-lambda": "6.0.0",
-    "next-api-og-image/puppeteer-core": "6.0.0"
-  },
-  "overrides": {
-    "next-api-og-image": {
-      "chrome-aws-lambda": "6.0.0",
-      "puppeteer-core": "6.0.0"
-    },
-    "cacheable-request": {
-      "keyv": "npm:@keyvhq/core@~1.6.6"
-    }
+    "prettier": "^2.0.5",
+    "typescript": "^4.2.4"
   }
 }
